[package]
name = "viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetra = "0.8.0"
robotics_lib = {version = "0.1.21", registry = "kellnr"}
tyrannousarust-rex-world-generator = { version = "0.5.0",registry = "kellnr" }
